<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".Activity.CreateNodeActivity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/app_color_white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="230dp"
        android:orientation="vertical"
        android:background="@drawable/main_page_search_linear_layout">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:baselineAligned="false">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_weight="1"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:id="@+id/from_edit_text_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:hint="@string/from"
                android:textColorHint="@color/text_color_light"
                app:helperTextTextColor="#FF0000"
                app:endIconMode="clear_text"
                app:endIconTint="@color/text_color_light"
                app:boxStrokeColor="@color/text_color_light">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/from_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/text_color_light"
                    android:inputType="text"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_weight="1"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:id="@+id/to_edit_text_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:hint="@string/to"
                android:textColorHint="@color/text_color_light"
                app:helperTextTextColor="#FF0000"
                app:endIconMode="clear_text"
                app:endIconTint="@color/text_color_light"
                app:boxStrokeColor="@color/text_color_light">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/to_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/text_color_light"
                    android:inputType="text"/>
            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginRight="5dp"
            android:layout_marginLeft="5dp"
            android:baselineAligned="false">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_weight="1"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:id="@+id/distance_edit_text_layout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:hint="@string/distance"
                android:textColorHint="@color/text_color_light"
                app:helperTextTextColor="#FF0000"
                app:endIconMode="clear_text"
                app:endIconTint="@color/text_color_light"
                app:boxStrokeColor="@color/text_color_light">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/distance_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/text_color_light"
                    android:inputType="number"/>
            </com.google.android.material.textfield.TextInputLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_gravity="center"
                android:gravity="center">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/two_way_street"
                    android:textStyle="bold"
                    android:textColor="@color/text_color_light"
                    android:textSize="12sp"
                    android:layout_gravity="center"
                    android:gravity="center">
                </TextView>

                <ImageButton
                    android:id="@+id/selected_two_way_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_baseline_radio_button_unchecked"
                    android:layout_gravity="center"
                    android:background="@android:color/transparent"
                    android:contentDescription="@string/select_two_way_image_button_name">
                </ImageButton>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center"
            android:gravity="center">

            <Button
                android:id="@+id/add_new_node_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add_node_button_name"
                android:layout_gravity="center"
                android:gravity="center">
            </Button>

            <ImageButton
                android:id="@+id/add_new_nodes_from_file"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_baseline_file_download"
                android:background="@android:color/transparent"
                android:layout_gravity="center">
            </ImageButton>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/result_route_linear_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/pre_registered_routes"
                android:textSize="20sp"
                android:textStyle="bold"
                android:textColor="@color/app_color_normal"
                android:textAlignment="center"
                android:layout_gravity="center"
                android:gravity="center">
            </TextView>

            <ImageButton
                android:id="@+id/delete_all_nodes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_baseline_delete"
                android:background="@android:color/transparent"
                android:layout_gravity="center">
            </ImageButton>
        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/routes_recycler_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        </androidx.recyclerview.widget.RecyclerView>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/error_no_route_linear_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_gravity="center"
        android:gravity="center">

        <ImageView
            android:id="@+id/error_image_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="200dp"
            android:src="@drawable/no_route"
            android:scaleType="fitCenter"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:contentDescription="@string/error_image_name">
        </ImageView>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="No Data"
            android:textColor="@color/text_color_dark"
            android:textSize="25sp"
            android:textStyle="bold"
            android:textAlignment="center"
            android:layout_gravity="center"
            android:gravity="center">
        </TextView>
    </LinearLayout>
</LinearLayout>