<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity.MainActivity"
    android:orientation="vertical"
    android:background="@color/app_color_white">

    <LinearLayout
        android:id="@+id/error_linear_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.5"
        tools:ignore="UseCompoundDrawables">

        <ImageView
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/welcome"
            android:scaleType="fitCenter"
            android:contentDescription="@string/error_image_name">
        </ImageView>

        <ImageView
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/map"
            android:scaleType="fitCenter"
            android:contentDescription="@string/error_image_name">
        </ImageView>

        <TextView
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/no_data_message"
            android:textColor="@color/text_color_dark"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textAlignment="center"
            android:layout_gravity="center"
            android:gravity="center"
            android:padding="20dp">
        </TextView>
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/search_linear_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:background="@drawable/main_page_search_linear_layout"
                android:layout_gravity="center"
                android:gravity="center"
                android:paddingRight="30dp"
                android:paddingLeft="30dp"
                android:paddingBottom="30dp">

                <TextView
                    android:id="@+id/from_text_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/from"
                    android:textSize="25sp"
                    android:textStyle="bold"
                    android:textColor="@color/text_color_light"
                    android:layout_marginTop="20dp"
                    android:ellipsize="marquee"
                    android:marqueeRepeatLimit="marquee_forever"
                    android:scrollHorizontally="true"
                    android:singleLine="true">
                </TextView>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/from_recycler_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                </androidx.recyclerview.widget.RecyclerView>

                <TextView
                    android:id="@+id/to_text_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/to"
                    android:textSize="25sp"
                    android:textStyle="bold"
                    android:textColor="@color/text_color_light"
                    android:layout_marginTop="20dp"
                    android:ellipsize="marquee"
                    android:marqueeRepeatLimit="marquee_forever"
                    android:scrollHorizontally="true"
                    android:singleLine="true">
                </TextView>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/to_recycler_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                </androidx.recyclerview.widget.RecyclerView>

                <Button
                    android:id="@+id/search_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/search"
                    android:textSize="18sp"
                    android:textColor="@color/text_color_light"
                    android:textStyle="bold"
                    android:textAlignment="center"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:drawableEnd="@drawable/ic_baseline_search"
                    android:backgroundTint="@color/app_color_normal">
                </Button>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/result_linear_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Current Route"
                        android:textColor="@color/app_color_normal"
                        android:textSize="25sp"
                        android:textStyle="bold"
                        android:textAlignment="center"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:padding="5dp"
                        android:layout_marginTop="20dp">
                    </TextView>

                    <TextView
                        android:id="@+id/current_route_text_view"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/text_color_dark"
                        android:textSize="20sp"
                        android:textStyle="bold"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:textAlignment="center"
                        android:ellipsize="marquee"
                        android:marqueeRepeatLimit="marquee_forever"
                        android:scrollHorizontally="true"
                        android:singleLine="true">
                    </TextView>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Total Distance"
                        android:textColor="@color/app_color_normal"
                        android:textSize="25sp"
                        android:textStyle="bold"
                        android:textAlignment="center"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:padding="5dp"
                        android:layout_marginTop="20dp">
                    </TextView>

                    <TextView
                        android:id="@+id/total_distance_text_view"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/text_color_dark"
                        android:textSize="20sp"
                        android:textStyle="bold"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:textAlignment="center"
                        android:ellipsize="marquee"
                        android:marqueeRepeatLimit="marquee_forever"
                        android:scrollHorizontally="true"
                        android:singleLine="true">
                    </TextView>
                </LinearLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Other Routes' Distance"
                    android:textColor="@color/app_color_normal"
                    android:textSize="25sp"
                    android:textStyle="bold"
                    android:textAlignment="center"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:padding="5dp"
                    android:layout_marginTop="20dp">
                </TextView>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/result_recycler_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:minHeight="200dp">
                </androidx.recyclerview.widget.RecyclerView>
            </LinearLayout>

            <ImageView
                android:id="@+id/map_image_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="200dp"
                android:src="@drawable/map"
                android:scaleType="fitCenter"
                android:layout_gravity="center">
            </ImageView>
        </LinearLayout>
    </ScrollView>

    <ImageButton
        android:id="@+id/add_node_image_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_baseline_add"
        android:background="@drawable/main_page_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.95"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.95"
        android:contentDescription="@string/add_image_button_name">
    </ImageButton>
</androidx.constraintlayout.widget.ConstraintLayout>